// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests the App component matches the snapshot 1`] = `
<div>
  <div>
    <div>
      <div>
        <form>
          <div>
            <label
              for="newBox-height"
            >
              Height
            </label>
            <input
              id="newBox-height"
              name="height"
              value=""
            />
          </div>
          <div>
            <label
              for="newBox-width"
            >
              Width
            </label>
            <input
              id="newBox-width"
              name="width"
              value=""
            />
          </div>
          <div>
            <label
              for="newBox-backgroundColor"
            >
              Background Color
            </label>
            <input
              id="newBox-backgroundColor"
              name="backgroundColor"
              value=""
            />
          </div>
          <button
            class="NewBoxForm-addBtn"
            id="NewBoxForm-addBtn"
          >
            Add a new box!
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the snapshot 1`] = `
<div>
  <div>
    <div>
      <div>
        <form>
          <div>
            <label
              for="newBox-height"
            >
              Height
            </label>
            <input
              id="newBox-height"
              name="height"
              value=""
            />
          </div>
          <div>
            <label
              for="newBox-width"
            >
              Width
            </label>
            <input
              id="newBox-width"
              name="width"
              value=""
            />
          </div>
          <div>
            <label
              for="newBox-backgroundColor"
            >
              Background Color
            </label>
            <input
              id="newBox-backgroundColor"
              name="backgroundColor"
              value=""
            />
          </div>
          <button
            class="NewBoxForm-addBtn"
          >
            Add a new box!
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
